Exc2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaletestapp-deployment
  labels:
    app: scaletestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaletestapp
  template:
    metadata:
      labels:
        app: scaletestapp
    spec:
      containers:
      - name: scaletestapp
        image: shestera/scaletestapp:latest
        ports:
        - containerPort: 8080
        resources:
         requests:
           memory: "15Mi"
         limits:
           memory: "15Mi"
           cpu: 1
