Exc2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaletestapp-service
spec:
  type: NodePort
  selector:
    app: scaletestapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
